[tool.poetry]
name = "mbd-elevator-dev"
version = "0.1.0"
description = "This python project is designed to aid the matlab-simulink development with extra features and host document for the project."
authors = ["Bruno Almiron Rodrigues"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"
mike = "^2.0.0"
mkdocs-minify-plugin = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
